--- a/professional-services.html
+++ b/professional-services.html
@@ -398,7 +398,7 @@ border-style:none;
   <div class="container top_padding">
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-        <div class="aboutus_banner"> <img src="images/professional-services-banner.jpg" alt="Key Solutions Product">
+        <div class="aboutus_banner"> <img src="https://i.postimg.cc/XvtzYMnc/Frame-34-7.png" alt="Key Solutions Product">
           <div class="inner_banner_text hidden-xs">
             <div class="col-sm-11 col-md-9 col-lg-9 text-left">
               <h1><span>Unlock Your Potential with Our Professional Services</span></h1>
