--- a/ai-ml-strategy-planning.html
+++ b/ai-ml-strategy-planning.html
@@ -267,13 +267,7 @@
                 <div class="contact1 contact3">
                   <h2>Crafting Your AI Strategy</h2>
                 </div>
-                <p>Embark on a transformative journey with our expert guidance in crafting bespoke AI strategies
-                  tailored to your organization's unique needs.
-                  We delve deep into understanding your business goals, objectives, and challenges, leveraging our
-                  industry expertise to formulate comprehensive AI strategies
-                  that align seamlessly with your vision. From optimizing operational efficiency to driving revenue
-                  growth, we empower you to harness the full potential
-                  of AI technologies, unlocking new opportunities for innovation and competitive advantage.</p>
+                <p>Embark on a transformative journey with our expert guidance in crafting customized AI/ML strategies tailored to your organization's unique needs. We delve deep into understanding your business goals, objectives, and challenges, leveraging our industry expertise to formulate comprehensive AI/ML strategies that align seamlessly with your vision. From optimizing operational efficiency to driving revenue growth, we empower you to harness the full potential of AI/ML technologies, unlocking new opportunities for innovation and competitive advantage.</p>
                 <!-- <img src="images/feature-img41.png" class="img-responsive" alt="img"> -->
                 <div class="contact1 contact3">
                   <h2>Mapping the Road to Success</h2>
