--- a/professional-services.html
+++ b/professional-services.html
@@ -485,7 +485,7 @@ border-style:none;
             </div>
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
               <!-- <h3 class="title_h3"><span>Overview</span></h3> -->
-              <p>At Key Solutions, we specialize in delivering cutting-edge software products and bespoke services tailored to the Life Sciences and Healthcare sectors. Our mission is to enable organizations to harness the full potential of their technology investments, ensuring seamless integration, enhanced efficiency, and superior decision-making capabilities.</p>
+              <p>At Key Solutions, we complement our product offerings with AI/ML services to unleash the power of your business. Our mission is to enable organizations to harness the full potential of their technology investments, ensuring seamless integration, enhanced efficiency, and superior decision-making capabilities.</p>
             </div>
 
             <!-- <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 feature_text">
