--- a/custom-development.html
+++ b/custom-development.html
@@ -462,7 +462,7 @@ border-style:none;
         </div>  -->
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 feature_text feature_text_services">
           <!-- <h3 class="title_h3 feature_h3"><span>Features</span></h3>     -->
-          <div class="contact1 contact3"><h2>Bespoke Solutions for Your Unique Needs</h2> </div>
+          <div class="contact1 contact3"><h2>Customized Solutions for Your Unique Needs</h2> </div>
           <p>In today's ever-evolving business landscape, off-the-shelf software solutions often fall short of meeting the diverse and evolving needs of organizations. That's where our custom software development services come in. We specialize in crafting tailored solutions that align perfectly with your business objectives, integrating our products seamlessly with third-party software systems to maximize efficiency, streamline processes, and drive growth. From customer branding and single sign-on (SSO) integration to seamless connectivity with CRM, ERP, animal ordering, billing, and financial systems, we deliver solutions that are as unique as your business.</p> 
           <!-- <img src="images/feature-img41.png" class="img-responsive" alt="img">  -->
           <div class="contact1 contact3"><h2>Excellence in Project Management</h2></div>
